--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,8 +1,12 @@
 @@include('../partials/head.html')
 @@include('../partials/header.html')
 
-<main>
-  <h1>Welcome to Home Page 123</h1>
+<main class="container mt-5">
+  <div class="text-center">
+    <h1 class="display-4">Welcome to My Template</h1>
+    <p class="lead">Built with Bootstrap 5</p>
+    <a href="login.html" class="btn btn-primary">Go to Login</a>
+  </div>
 </main>
 
 @@include('../partials/footer.html')
